--- a/website/templates/website/caregiver/home.html
+++ b/website/templates/website/caregiver/home.html
@@ -6,8 +6,12 @@
 {% block content %}
     <div class="row mt-3 mx-3">
         <div class="col-md-5 my-auto">
-            <h1 class="display-3">Reach out families</h1>
-            <p class="fw-lighter">{% lorem 20 w %}</p>
+              
+            <h1 class="display-3"  style="font-size:200%;">ARE YOU AN EARLY CHILDHOOD PROFESSIONAL?
+                 BE SEEN BY AN EVER-GROWING COMMUNITY OF PARENTS</h1>
+                 Do you spend a lot of time on the phone handling bookings? And do you spend time and money on your marketing and customer acquisition? All the additional tasks that come with the profession can be daunting. 
+                 Let us free you from that burden so that you can go back to doing what you love: taking care of families!
+            <p class="fw-lighter">{% lorem 0 w %}</p>
             <a class="btn btn-primary" href="{% url 'caregiver:signup' %}" role="button">{% trans 'Join us' %}</a>
         </div>
 
@@ -19,20 +23,29 @@
     <div class="row justify-content-around">
         <div class="col-md-2">
             <section>
-                <h2>Section 1</h2>
-                <p>{% lorem 30 w%}</p>
+                <h2>1 SIGN UP</h2>
+                Sign up and choose the membership that best meets your needs. <br>
+                You can start with the free membership version and get a feel for the platform and get acquainted with our services. 
+                You can choose to stay present on the free membership for as long as you desire. <br>
+                When your needs grow you can then upgrade your membership. <br>
+                We grow with you and support you all throughout your career.
             </section>
         </div>
         <div class="col-md-2">
             <section>
-                <h2>Section 2</h2>
-                <p>{% lorem 30 w%}</p>
+                <h2>2 CREATE YOUR PROFILE</h2>
+                Create a profile by completing the needed information in the profile creation step. <br>
+                This will allow parents to have a comprehensive view on your services, prices, consultation hours, location and more.
             </section>
         </div>
         <div class="col-md-2">
             <section>
-                <h2>Section 3</h2>
-                <p>{% lorem 30 w%}</p>
+                <h2>3 CONNECT WITH PARENTS</h2>
+                Be seen by our ever-growing community of parents and enjoy bookings coming in. <br>
+                Get notifications when an appointment has been booked. <br>
+                No need anymore to work on your marketing, your referencing or to spend time and money on customer acquisition. 
+                We do it all for you. <br>
+                Benefit from easy-to-use interfaces and automated processes.
             </section>
         </div>
     </div>
