--- a/website/templates/website/parent/home.html
+++ b/website/templates/website/parent/home.html
@@ -59,20 +59,20 @@
     <div class="row justify-content-around">
         <div class="col-md-2">
             <section>
-                <h2>Section 1</h2>
-                <p>{% lorem 30 w%}</p>
+                <h2>1 SIGN UP</h2>
+                <p>Sign up to create your online account to keep track of your bookings.</p>
             </section>
         </div>
         <div class="col-md-2">
             <section>
-                <h2>Section 2</h2>
-                <p>{% lorem 30 w%}</p>
+                <h2>2 CHOOSE THE SUPPORT YOU NEE</h2>
+                <p>Find the help you are seeking!<br> Thanks to our category drop down menu, you can select the field in which you are seeking support.<br> All the professions offering help in that category will show up.<br> There is much more help available out there than parents often know.<br> Help is on the way!</p>
             </section>
         </div>
         <div class="col-md-2">
             <section>
-                <h2>Section 3</h2>
-                <p>{% lorem 30 w%}</p>
+                <h2>3 BOOK YOUR SESSION</h2>
+                <p>Once you have found your caregiver, you can easily book an appointment.<br> You will get free reminders before your appointments, so you don’t have to think about it anymore!</p>
             </section>
         </div>
     </div>
