--- a/website/templates/website/parent/home.html
+++ b/website/templates/website/parent/home.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-2">
             <section>
-                <h2>2 CHOOSE THE SUPPORT YOU NEE</h2>
+                <h2>2 CHOOSE THE SUPPORT YOU NEED</h2>
                 <p>Find the help you are seeking!<br> Thanks to our category drop down menu, you can select the field in which you are seeking support.<br> All the professions offering help in that category will show up.<br> There is much more help available out there than parents often know.<br> Help is on the way!</p>
             </section>
         </div>
