--- a/website/templates/website/parent/home.html
+++ b/website/templates/website/parent/home.html
@@ -46,15 +46,16 @@
 
                     </form>
                 </div>
-                <div class="col-md-5 my-auto">
               
-                    <h1 class="display-3"  style="font-size:200%;">Help and Support!
-                         </h1>
-                        <p class="fw-lighter">{% Becoming a parent can be quite a transition. And at BearHug we believe that this transition into parenthood should be a serene and peaceful experience. At BearHug you can find support and get early childhood professionals to guide you from pregnancy all the way through post-partum. They will listen, help and support you.
-        
-                            Pregnancy and parenthood can often be unchartered territories, which it doesn’t need to be. We want to enable you to make informed decisions about childbirth, your post-partum wellbeing, your relationship and parenthood. Knowledge is power and we strive to help you find yours! %}</p>
-                    <a class="btn btn-primary" href="{% url 'caregiver:signup' %}" role="button">{% trans 'Join us' %}</a>
-                </div>
+            </div>
+            <div class="col-md-5 my-auto">
+              
+                <h1 class="display-3"  style="font-size:200%;">Help and Support!
+                     </h1>
+                    <p class="fw-lighter"> Becoming a parent can be quite a transition. And at BearHug we believe that this transition into parenthood should be a serene and peaceful experience. At BearHug you can find support and get early childhood professionals to guide you from pregnancy all the way through post-partum. They will listen, help and support you.
+    
+                        Pregnancy and parenthood can often be unchartered territories, which it doesn’t need to be. We want to enable you to make informed decisions about childbirth, your post-partum wellbeing, your relationship and parenthood. Knowledge is power and we strive to help you find yours!</p>
+                <a class="btn btn-primary" href="{% url 'caregiver:signup' %}" role="button">{% trans 'Join us' %}</a>
             </div>
         </div>
 
