--- a/website/templates/website/parent/home.html
+++ b/website/templates/website/parent/home.html
@@ -7,12 +7,15 @@
 {% block content %}
 <div class="col-md-5 my-auto">
               
-    <h1 class="display-3"  style="font-size:200%;">Help and Support!
-         </h1>
-        <p class="fw-lighter"> Becoming a parent can be quite a transition. And at BearHug we believe that this transition into parenthood should be a serene and peaceful experience. At BearHug you can find support and get early childhood professionals to guide you from pregnancy all the way through post-partum. They will listen, help and support you.
+    <h1 class="display-3"  style="font-size:200%;">ARE YOU PREGNANT? ARE YOU A PARENT?<br> </h1>
+    <h2 class="display-3"  style="font-size:150%;">FIND HELP AND SUPPORT<br> </h2>
+    
+    
+        
+        <p class="fw-lighter"> Are you about to have a baby? Or maybe your baby is already born? Do you have a million questions? Do you often feel overwhelmed? Pregnancy, birth and post-partum are life changing moments in the life of a couple and at BearHug we believe that the transition into parenthood should be an easy and peaceful one.<br>
 
-            Pregnancy and parenthood can often be unchartered territories, which it doesn’t need to be. We want to enable you to make informed decisions about childbirth, your post-partum wellbeing, your relationship and parenthood. Knowledge is power and we strive to help you find yours!</p>
-    <a class="btn btn-primary" href="{% url 'caregiver:signup' %}" role="button">{% trans 'Join us' %}</a>
+            At BearHug you can find help and support to accompany you and your partner through the journey of parenthood.  
+            Because after all, it takes a village to raise a child!</p>
 </div>
     <div class="row mx-3">
         <div class="col-md-4 my-auto">
