--- a/website/templates/website/parent/home.html
+++ b/website/templates/website/parent/home.html
@@ -5,7 +5,7 @@
 
 
 {% block content %}
-<div class="col-md-5 my-auto">
+<div >
               
     <h1 class="display-3"  style="font-size:200%;">ARE YOU PREGNANT? ARE YOU A PARENT?<br> </h1>
     <h2 class="display-3"  style="font-size:150%;">FIND HELP AND SUPPORT<br> </h2>
